# crypto

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
config/: default.yaml  live_disabled.yaml  paper.yaml  paper_coinbase_xrp_discovery.yaml
docs/: ARCHITECTURE.md  BASELINE.md  CODEX_HANDOFF.md  HARNESS_BASELINE.md  LAUNCH_VERDICT_REASON_CODES.md  LIVE_LAUNCH_RUNBOOK.md  MATRIX_BASELINE.md  OPERATING_MODEL.md  OPERATOR_SURFACES.md  PHASE_37J_LOCAL_TRANSPORT_CONSUMER_WORKFLOW_CONTRACT.md  PHASE_C11_TRANSPORT_RUNNER_HARDENING_CHECKPOINT.md  PHASE_C7_TRANSPORT_RUNNER_MANUAL_SMOKE.md  PHASE_G11_LAUNCH_VERDICT_WORKFLOW_CLOSEOUT.md  PHASE_G9_LAUNCH_VERDICT_REHEARSAL.md  PHASE_H1A_SANDBOX_CLI_WIRING.md  PHASE_H1B_SANDBOX_EXECUTABLE_ORDER_REHEARSAL_BLOCKER.md  PHASE_H1C_FIXTURE_BACKED_SANDBOX_CLI_REHEARSAL_DESIGN.md  PHASE_H1D_IMPLEMENT_FIXTURE_BACKED_SANDBOX_REHEARSAL.md  PHASE_H1E_SANDBOX_REHEARSAL_OPERATOR_DOCS.md  PHASE_H1G_SANDBOX_TRACK_CLOSEOUT.md  PHASE_H2A_SHIPPED_VS_BLOCKED_SURFACE_AUDIT.md  PHASE_H2B_GUARD_FLAG_COVERAGE_AUDIT.md  PHASE_H2C_OPERATOR_COMMAND_REFERENCE_AUDIT.md  PHASE_L1A_TINY_LIMITED_LIVE_SCOPE_LOCK.md  PHASE_L1B_LIMITED_LIVE_AUTHORITY_DESIGN.md  PHASE_L1C_LIMITED_LIVE_IMPLEMENTATION_SCOPE_MAP.md  PHASE_L1D_LIMITED_LIVE_IMPLEMENTATION_FOUNDATION.md  PHASE_L1E_LIMITED_LIVE_GATE_EVALUATION.md  PHASE_L1F_LIVE_APPROVAL_FOUNDATION.md  PHASE_L1G_LAUNCH_WINDOW_FOUNDATION.md  PHASE_L1H_LIMITED_LIVE_ENABLE_TOGGLE.md  PHASE_L1I_REAL_TRANSMISSION_BOUNDARY_WIRING.md  PHASE_L1J_TINY_POSITIVE_PATH_LIVE_AUTHORITY_TEST.md  (+30 more)
scripts/: phase_close_check.sh  (+2 more)
(+233 files in other folders)
