[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-agent"
version = "0.1.0"
description = "Controlled, auditable, risk-aware crypto trading system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3.0",
  "pyyaml>=6.0.1,<7.0.0",
]

[project.scripts]
crypto-agent-paper-run = "crypto_agent.cli.main:main"

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2.0",
  "pytest>=8.1,<9.0",
  "ruff>=0.4.0,<1.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["crypto_agent"]
warn_unused_configs = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true
